# logstat

./: README.md  pyproject.toml  setup.cfg  setup.py
logstat/: __main__.py  cli.py  ess.py  logstat.py  options.py  stats.py  summary.py  utils.py
tests/: test_cli.py  test_ess.py  test_stats.py  test_utils.py
