[metadata]
name = logstat
url = https://github.com/4ment/logstat
author = Mathieu Fourment
author_email = mathieu.fourment@uts.edu.au
keywords = visualization
description = stats from log files
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
python_requires = >=3.7
packages = find:
package_dir =
    =.
install_requires =
    click,
    numpy>=1.7,
    polars

[options.entry_points]
console_scripts =
    logstat = logstat.cli:console_main


[options.extras_require]
dev =
    black
    flake8
    isort
    pylint
test =
    pytest

[flake8]
max-line-length = 88